[package]
name = "lumatest"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.luma]
git = "https://github.com/rust-wii/luma"

[dependencies.luma_core]
git = "https://github.com/rust-wii/luma"

[dependencies.luma_runtime]
git = "https://github.com/rust-wii/luma"
